# gcpt

./: .gitignore  CMakeLists.txt  GCPT_Windows.bat  README.md  vs-chromium-project.txt
data/audio/nes/: nes.cfg  nes.txt
data/fonts/: default.txt  menu.txt
data/kicksets/: SRS.txt
data/materials/ui/: leftbutton.psd  leftbutton.tmat  leftbutton.ttex
data/shaders/: unlit.frag  unlit.vert
data/sheetformats/: ppt.txt
src/client/: CMakeLists.txt  client.cpp  client.h  client_state.cpp  client_state.h  gl.cpp  gl.h  gl_context.cpp  gl_context.h  gl_cubemap.cpp  gl_cubemap.h  gl_framebuffer.cpp  gl_framebuffer.h  gl_meshrenderer.cpp  gl_meshrenderer.h  gl_program.cpp  gl_program.h  gl_texture.cpp  gl_texture.h  input_manager.cpp  input_manager.h  main.cpp  material.cpp  material.h  material_grid.cpp  material_grid.h  material_manager.cpp  material_manager.h  material_param.h  material_sprite.cpp  material_sprite.h  material_spritesheet.cpp  material_spritesheet.h  material_surface.cpp  material_surface.h  mesh_renderer.cpp  mesh_renderer.h  render_channels.h  render_cmd.cpp  render_cmd.h  (+68 more)
src/server/: CMakeLists.txt  main.cpp
src/shared/: CMakeLists.txt  alloc.cpp  alloc.h  allocator.h  anim_joint.h  anim_keyframe.h  anim_skeleton.h  anim_track.cpp  anim_track.h  animation.cpp  animation.h  animation_manager.cpp  animation_manager.h  assert.h  asset.cpp  asset.h  asset_manager.h  axes.cpp  bag.h  board.cpp  board.h  box.h  byte_reader.cpp  byte_reader.h  byte_writer.cpp  byte_writer.h  chat.h  colour.cpp  colour.h  commandline.cpp  commandline.h  concepts.h  console.cpp  console.h  convar.cpp  convar.h  debug.cpp  debug.h  defs.h  engine.cpp  (+151 more)
